; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display_power.c___async_put_domains_mask.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display_power.c___async_put_domains_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i915_power_domains = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i915_power_domains*)* @__async_put_domains_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__async_put_domains_mask(%struct.i915_power_domains* %0) #0 {
  %2 = alloca %struct.i915_power_domains*, align 8
  store %struct.i915_power_domains* %0, %struct.i915_power_domains** %2, align 8
  %3 = load %struct.i915_power_domains*, %struct.i915_power_domains** %2, align 8
  %4 = getelementptr inbounds %struct.i915_power_domains, %struct.i915_power_domains* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.i915_power_domains*, %struct.i915_power_domains** %2, align 8
  %9 = getelementptr inbounds %struct.i915_power_domains, %struct.i915_power_domains* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 1
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %7, %12
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
